--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -1,11 +1,25 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
-# This model initially had no columns defined.  If you add columns to the
-# model remove the '{}' from the fixture names and add the columns immediately
-# below each fixture, per the syntax in the comments below
-#
-one: {}
-# column: value
-#
-two: {}
-#  column: value
+one:
+  email: MyString
+  password_digest: MyString
+  handle: MyString
+  city: MyString
+  state: MyString
+  description: MyString
+  image_uri: MyString
+  current_chamber_id: 1
+  current_book_id: 1
+  featured: false
+
+two:
+  email: MyString
+  password_digest: MyString
+  handle: MyString
+  city: MyString
+  state: MyString
+  description: MyString
+  image_uri: MyString
+  current_chamber_id: 1
+  current_book_id: 1
+  featured: false
